postgres.c3

import libc;

def PG_Int64_Type = long;
def Oid = uint;

// #define InvalidOid		(Oid(0))

const int OID_MAX = uint.max;

macro atooid(x) {
    return (Oid) strtoul((x), NULL, 10);
}

def PG_int64 = PG_Int64_Type;

const int PG_DIAG_SEVERITY = 'S';
const int PG_DIAG_SEVERITY_NONLOCALIZED = 'V';
const int PG_DIAG_SQLSTATE = 'C';
const int PG_DIAG_MESSAGE_PRIMARY = 'M';
const int PG_DIAG_MESSAGE_DETAIL = 'D';
const int PG_DIAG_MESSAGE_HINT = 'H';
const int PG_DIAG_STATEMENT_POSITION = 'P';
const int PG_DIAG_INTERNAL_POSITION = 'p';
const int PG_DIAG_INTERNAL_QUERY = 'q';
const int PG_DIAG_CONTEXT = 'W';
const int PG_DIAG_SCHEMA_NAME = 's';
const int PG_DIAG_TABLE_NAME = 't';
const int PG_DIAG_COLUMN_NAME = 'c';
const int PG_DIAG_DATATYPE_NAME = 'd';
const int PG_DIAG_CONSTRAINT_NAME = 'n';
const int PG_DIAG_SOURCE_FILE = 'F';
const int PG_DIAG_SOURCE_LINE = 'L';
const int PG_DIAG_SOURCE_FUNCTION = 'R';

const int LIBPQ_HAS_PIPELINING = 1;
const int LIBPQ_HAS_TRACE_FLAGS = 1;
const int LIBPQ_HAS_SSL_LIBRARY_DETECTION = 1;

const int PG_COPYRES_ATTRS = 0x01;
const int PG_COPYRES_TUPLES = 0x02;
const int PG_COPYRES_EVENTS = 0x04;
const int PG_COPYRES_NOTICEHOOKS = 0x08;

enum ConnStatusType {
	CONNECTION_OK,
	CONNECTION_BAD,
	/* Non-blocking mode only below here */

	/*
	 * The existence of these should never be relied upon - they should only
	 * be used for user feedback or similar purposes.
	 */
	CONNECTION_STARTED,			/* Waiting for connection to be made.  */
	CONNECTION_MADE,			/* Connection OK; waiting to send.     */
	CONNECTION_AWAITING_RESPONSE,	/* Waiting for a response from the
									 * postmaster.        */
	CONNECTION_AUTH_OK,			/* Received authentication; waiting for
								 * backend startup. */
	CONNECTION_SETENV,			/* This state is no longer used. */
	CONNECTION_SSL_STARTUP,		/* Negotiating SSL. */
	CONNECTION_NEEDED,			/* Internal state: connect() needed */
	CONNECTION_CHECK_WRITABLE,	/* Checking if session is read-write. */
	CONNECTION_CONSUME,			/* Consuming any extra messages. */
	CONNECTION_GSS_STARTUP,		/* Negotiating GSSAPI. */
	CONNECTION_CHECK_TARGET,	/* Checking target server properties. */
	CONNECTION_CHECK_STANDBY	/* Checking if server is in standby mode. */
}

enum PostgresPollingStatusType {
	PGRES_POLLING_FAILED = 0,
	PGRES_POLLING_READING,		/* These two indicate that one may	  */
	PGRES_POLLING_WRITING,		/* use select before polling again.   */
	PGRES_POLLING_OK,
	PGRES_POLLING_ACTIVE		/* unused; keep for awhile for backwards
								 * compatibility */
}

enum ExecStatusType {
	PGRES_EMPTY_QUERY = 0,		/* empty query string was executed */
	PGRES_COMMAND_OK,			/* a query command that doesn't return
								 * anything was executed properly by the
								 * backend */
	PGRES_TUPLES_OK,			/* a query command that returns tuples was
								 * executed properly by the backend, PGresult
								 * contains the result tuples */
	PGRES_COPY_OUT,				/* Copy Out data transfer in progress */
	PGRES_COPY_IN,				/* Copy In data transfer in progress */
	PGRES_BAD_RESPONSE,			/* an unexpected response was recv'd from the
								 * backend */
	PGRES_NONFATAL_ERROR,		/* notice or warning message */
	PGRES_FATAL_ERROR,			/* query failed */
	PGRES_COPY_BOTH,			/* Copy In/Out data transfer in progress */
	PGRES_SINGLE_TUPLE,			/* single tuple from larger resultset */
	PGRES_PIPELINE_SYNC,		/* pipeline synchronization point */
	PGRES_PIPELINE_ABORTED		/* Command didn't run because of an abort
								 * earlier in a pipeline */
}

enum PGTransactionStatusType {
	PQTRANS_IDLE,				/* connection idle */
	PQTRANS_ACTIVE,				/* command in progress */
	PQTRANS_INTRANS,			/* idle, within transaction block */
	PQTRANS_INERROR,			/* idle, within failed transaction */
	PQTRANS_UNKNOWN				/* cannot determine status */
}

enum PGVerbosity {
	PQERRORS_TERSE,				/* single-line error messages */
	PQERRORS_DEFAULT,			/* recommended style */
	PQERRORS_VERBOSE,			/* all the facts, ma'am */
	PQERRORS_SQLSTATE			/* only error severity and SQLSTATE code */
}

enum PGContextVisibility {
	PQSHOW_CONTEXT_NEVER,		/* never show CONTEXT field */
	PQSHOW_CONTEXT_ERRORS,		/* show CONTEXT for errors only (default) */
	PQSHOW_CONTEXT_ALWAYS		/* always show CONTEXT field */
}

/*
 * PGPing - The ordering of this enum should not be altered because the
 * values are exposed externally via pg_isready.
 */

enum PGPing {
	PQPING_OK,					/* server is accepting connections */
	PQPING_REJECT,				/* server is alive but rejecting connections */
	PQPING_NO_RESPONSE,			/* could not establish connection */
	PQPING_NO_ATTEMPT			/* connection not attempted (bad params) */
}

/*
 * PGpipelineStatus - Current status of pipeline mode
 */
enum PGpipelineStatus {
	PQ_PIPELINE_OFF,
	PQ_PIPELINE_ON,
	PQ_PIPELINE_ABORTED
}

/* PGconn encapsulates a connection to the backend.
 * The contents of this struct are not supposed to be known to applications.
 */
def PGconn = void;

/* PGresult encapsulates the result of a query (or more precisely, of a single
 * SQL command --- a query string given to PQsendQuery can contain multiple
 * commands and thus return multiple PGresult objects).
 * The contents of this struct are not supposed to be known to applications.
 */
def PGresult = void;

/* PGcancel encapsulates the information needed to cancel a running
 * query on an existing connection.
 * The contents of this struct are not supposed to be known to applications.
 */
def PGcancel = void;


/* PGnotify represents the occurrence of a NOTIFY message.
 * Ideally this would be an opaque , but it's so simple that it's
 * unlikely to change.
 * NOTE: in Postgres 6.4 and later, the be_pid is the notifying backend's,
 * whereas in earlier versions it was always your own backend's PID.
 */
struct PGnotify {
	char	   *relname;		/* notification condition name */
	int			be_pid;			/* process ID of notifying server process */
	char	   *extra;			/* notification parameter */
	/* Fields below here are private to libpq; apps should not use 'em */
	PGnotify *next;		/* list link */
}

/* Function types for notice-handling callbacks */
def PQnoticeReceiver = fn void (void *arg, PGresult *res);
def PQnoticeProcessor = fn void (void *arg, char *message);

/* Print options for PQprint() */
def PQbool = char;

struct PQprintOpt {
	PQbool		header;			/* print output field headings and row count */
	PQbool		align;			/* fill align the fields */
	PQbool		standard;		/* old brain dead format */
	PQbool		html3;			/* output html tables */
	PQbool		expanded;		/* expand tables */
	PQbool		pager;			/* use pager for output if needed */
	char	   *fieldSep;		/* field separator */
	char	   *tableOpt;		/* insert to HTML <table ...> */
	char	   *caption;		/* HTML <caption> */
	char	  **fieldName;		/* null terminated array of replacement field
								 * names */
}

/* ----------------
 * Structure for the conninfo parameter definitions returned by PQconndefaults
 * or PQconninfoParse.
 *
 * All fields except "val" point at static strings which must not be altered.
 * "val" is either NULL or a malloc'd current-value string.  PQconninfoFree()
 * will release both the val strings and the PQconninfoOption array itself.
 * ----------------
 */
struct PQconninfoOption {
	char	   *keyword;		/* The keyword of the option			*/
	char	   *envvar;			/* Fallback environment variable name	*/
	char	   *compiled;		/* Fallback compiled in default value	*/
	char	   *val;			/* Option's current value, or NULL		 */
	char	   *label;			/* Label for field in connect dialog	*/
	char	   *dispchar;		/* Indicates how to display this field in a
								 * connect dialog. Values are: "" Display
								 * entered value as is "*" Password field -
								 * hide value "D"  Debug option - don't show
								 * by default */
	int			dispsize;		/* Field size in characters for dialog	*/
}

/* ----------------
 * PQArgBlock -- structure for PQfn() arguments
 * ----------------
 */
struct PQArgBlock {
	int			len;
	int			isint;
	union u
	{
		int		   *ptr;		/* can't use void (dec compiler barfs)	 */
		int			integer;
	}
}

/* ----------------
 * PGresAttDesc -- Data about a single attribute (column) of a query result
 * ----------------
 */
struct PQresAttDesc {
	char	   *name;			/* column name */
	Oid			tableid;		/* source table, if known */
	int			columnid;		/* source column, if known */
	int			format;			/* format code for value (text/binary) */
	Oid			typid;			/* type id */
	int			typlen;			/* type size */
	int			atttypmod;		/* type-specific modifier info */
}

/* ----------------
 * Exported functions of libpq
 * ----------------
 */

/* === in fe-connect.c === */

/* make a new client connection to the backend */
/* Asynchronous (non-blocking) */
extern fn PGconn *pq_connect_start(char *conninfo) @extern("PQconnectStart");
extern fn PGconn *pq_connect_start_params(char **keywords,
									char **values, int expand_dbname)
                                    @extern("PQconnectStartParams");
extern fn PostgresPollingStatusType pq_connect_poll(PGconn *conn) @extern("PQconnectPoll");

/* Synchronous (blocking) */
extern fn PGconn *pq_connect_db(char *conninfo) @extern("PQconnectdb");
extern fn PGconn *pq_connect_db_params(char **keywords,
								 char **values, int expand_dbname)
                                 @extern("PQconnectdbParams");
extern fn PGconn *pq_setdb_login(char *pghost, char *pgport,
							char *pgoptions, char *pgtty,
							char *dbName,
							char *login, char *pwd) @extern("PQsetdbLogin");

macro pq_setdb(m_pghost,m_pgport,m_pgopt,m_pgtty,m_dbname) {
	return pq_setdb_login(m_pghost, m_pgport, m_pgopt, m_pgtty, m_dbname, null,
    null);
}

/* close the current connection and free the PGconn data structure */
extern fn void pq_finish(PGconn *conn) @extern("PQfinish");

/* get info about connection options known to PQconnectdb */
extern fn PQconninfoOption *pq_conndefaults(void) @extern("PQconndefaults");

/* parse connection options in same way as PQconnectdb */
extern fn PQconninfoOption *pq_conninfo_parse(char *conninfo, char **errmsg)
@extern("PQconninfoParse");

/* return the connection options used by a live connection */
extern fn PQconninfoOption *pq_conninfo(PGconn *conn) @extern("PQconninfo");

/* free the data structure returned by PQconndefaults() or PQconninfoParse() */
extern fn void pq_conninfo_free(PQconninfoOption *connOptions) @extern("PQconninfoFree");

/*
 * close the current connection and reestablish a new one with the same
 * parameters
 */
/* Asynchronous (non-blocking) */
extern fn int pq_reset_start(PGconn *conn) @extern("PQresetStart");
extern fn PostgresPollingStatusType pq_reset_poll(PGconn *conn) @extern("PQresetPoll");

/* Synchronous (blocking) */
extern fn void PQreset(PGconn *conn) @extern("PQreset");

/* request a cancel structure */
extern fn PGcancel *PQgetCancel(PGconn *conn) @extern("PQgetCancel");

/* free a cancel structure */
extern fn void PQfreeCancel(PGcancel *cancel) @extern("PQfreeCancel");

/* issue a cancel request */
extern fn int	PQcancel(PGcancel *cancel, char *errbuf, int errbufsize) @extern("PQcancel");

/* backwards compatible version of PQcancel; not thread-safe */
extern fn int	PQrequestCancel(PGconn *conn) @extern("PQrequestCancel");
